support translate/qrdecode

--- a/service/src/Makefile
+++ b/service/src/Makefile
@@ -1,11 +1,12 @@
 .PHONY: all clean
 
+LIBS = gloox libpng libqrencode zbar Magick++
 CXXFLAGS += -fPIE -g -std=c++11
 
 all: vbot
 
 vbot: vbot.cc
-	$(CXX) $(CXXFLAGS) -o $@ $^ -lgloox -lflite_cmu_us_kal -lflite -lpng -lqrencode
+	$(CXX) $(CXXFLAGS) -o $@ $^ -lflite_cmu_us_kal -lflite `pkg-config --cflags --libs $(LIBS)`
 	# strip $@
 
 clean:
