--- a/service/service.conf
+++ b/service/service.conf
@@ -8,5 +8,5 @@ service service
     server      = /vchat
     port        = 2555
     type        = UNLISTED
-    passenv     = VCHAT_SERVER
+    passenv     = VCHAT_SERVER VCHAT_MESSAGE
 }
