use 48 bytes flag

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && apt-get install -y \
     libzbar0 \
     libmagick++-6.q16-7
 
-RUN touch /flag && chmod 644 /flag && echo -ne "TESTFLAG" | md5sum | cut -f1 -d' ' > /flag
+RUN touch /flag && chmod 644 /flag && echo -n "TESTFLAG" | shasum -a 512 | cut -c 1-48  > /flag
 COPY service.conf /service.conf
 COPY src/vchat /vchat
 COPY src/vbot /vbot
