--- a/service/service.conf
+++ b/service/service.conf
@@ -3,7 +3,7 @@ service service
     socket_type = stream
     protocol    = tcp
     wait        = no
-    user        = nobody
+    user        = root
     bind        = 0.0.0.0
     server      = /vchat
     port        = 2555
