--- a/chatserver/ejabberd.yml
+++ b/chatserver/ejabberd.yml
@@ -165,25 +165,25 @@ listen:
     max_stanza_size: 65536
     shaper: c2s_shaper
     access: c2s
-  -
-    port: 5269
-    ip: "::"
-    module: ejabberd_s2s_in
-    max_stanza_size: 131072
-    shaper: s2s_shaper
-  -
-    port: 5280
-    ip: "::"
-    module: ejabberd_http
-    request_handlers:
-      "/ws": ejabberd_http_ws
-      "/bosh": mod_bosh
-      "/oauth": ejabberd_oauth
-      "/api": mod_http_api
-    ##  "/pub/archive": mod_http_fileserver
-    web_admin: true
-    ## register: true
-    captcha: false
+    ##   -
+    ##     port: 5269
+    ##     ip: "::"
+    ##     module: ejabberd_s2s_in
+    ##     max_stanza_size: 131072
+    ##     shaper: s2s_shaper
+    ##   -
+    ##     port: 5280
+    ##     ip: "::"
+    ##     module: ejabberd_http
+    ##     request_handlers:
+    ##       "/ws": ejabberd_http_ws
+    ##       "/bosh": mod_bosh
+    ##       "/oauth": ejabberd_oauth
+    ##       "/api": mod_http_api
+    ##     ##  "/pub/archive": mod_http_fileserver
+    ##     web_admin: true
+    ##     ## register: true
+    ##     captcha: false
   ##
   ## ejabberd_service: Interact with external components (transports, ...)
   ##
@@ -365,7 +365,7 @@ s2s_use_starttls: required
 host_config:
     "ooo.vchat":
         auth_method:
-            - internal
+            # - internal
             - anonymous
 
 ###.  ==============
@@ -463,7 +463,7 @@ acl:
   ##
   admin:
     user:
-      - "admin@ooo.vchat"
+        # - "admin@ooo.vchat"
 
   ##
   ## Blocked users
@@ -540,30 +540,36 @@ shaper_rules:
 access_rules:
   ## This rule allows access only for local users:
   local:
-    - allow: local
+    - deny
+      # - allow: local
   ## Only non-blocked users can use c2s connections:
   c2s:
     - deny: blocked
     - allow
   ## Only admins can send announcement messages:
   announce:
-    - allow: admin
+    - deny
+      # - allow: admin
   ## Only admins can use the configuration interface:
   configure:
-    - allow: admin
+    - deny
+      # - allow: admin
   ## Only accounts of the local ejabberd server can create rooms:
   muc_create:
-    - allow: local
+    - deny
+      # - allow: local
   ## Only accounts on the local ejabberd server can create Pubsub nodes:
   pubsub_createnode:
-    - allow: local
+    - deny
+      # - allow: local
   ## In-band registration allows registration of any possible username.
   ## To disable in-band registration, replace 'allow' with 'deny'.
   register:
-    - allow
+    - deny
   ## Only allow to register from localhost
   trusted_network:
-    - allow: loopback
+    - deny
+      # - allow: loopback
   ## Do not establish S2S connections with bad servers
   ## If you enable this you also have to uncomment "s2s_access: s2s"
   ## s2s:
@@ -597,28 +603,28 @@ api_permissions:
       - ejabberd_ctl
     who: all
     what: "*"
-  "admin access":
-    who:
-      - access:
-          - allow:
-            - acl: loopback
-            - acl: admin
-      - oauth:
-        - scope: "ejabberd:admin"
-        - access:
-          - allow:
-            - acl: loopback
-            - acl: admin
-    what:
-      - "*"
-      - "!stop"
-      - "!start"
-  "public commands":
-    who:
-      - ip: "127.0.0.1/8"
-    what:
-      - "status"
-      - "connected_users_number"
+    #   "admin access":
+    #     who:
+    #       - access:
+    #           - allow:
+    #             - acl: loopback
+    #             - acl: admin
+    #       - oauth:
+    #         - scope: "ejabberd:admin"
+    #         - access:
+    #           - allow:
+    #             - acl: loopback
+    #             - acl: admin
+    #     what:
+    #       - "*"
+    #       - "!stop"
+    #       - "!start"
+    #   "public commands":
+    #     who:
+    #       - ip: "127.0.0.1/8"
+    #     what:
+    #       - "status"
+    #       - "connected_users_number"
 
 ## By default the frequency of account registrations from the same IP
 ## is limited to 1 account every 10 minutes. To disable, specify: infinity
