disable trusted network

--- a/chatserver/ejabberd.yml
+++ b/chatserver/ejabberd.yml
@@ -562,7 +562,7 @@ access_rules:
     - deny
   ## Only allow to register from localhost
   trusted_network:
-    - allow: loopback
+    - deny
   ## Do not establish S2S connections with bad servers
   ## If you enable this you also have to uncomment "s2s_access: s2s"
   ## s2s:
